--- a/website/gamehub/templates/activities/chat.html
+++ b/website/gamehub/templates/activities/chat.html
@@ -22,5 +22,5 @@
 <input type="text" id="message" placeholder="Message" />
 <button class="btn btn-primary" id="sendMsgButton">Send</button>
 
-<script src="{{url_for('static',filename='js/cah.js')}}"></script>
+<script src="{{url_for('static',filename='js/chat.js')}}"></script>
 {% endblock %}
