--- a/website/gamehub/templates/activities/chat.html
+++ b/website/gamehub/templates/activities/chat.html
@@ -1,12 +1,20 @@
 {% extends "activities/base-activity.html" %} {% block metatags %}
 <meta name="description" content="Chat with friends" />
-{% endblock %} {% block scripts %} {{ super() }} {% endblock %} {% block
-contents %}
+{% endblock %} {% block scripts %} {{ super() }}
+<!-- css -->
+<link
+    href="{{ url_for('static', filename='css/chat.css') }}"
+    type="text/css"
+    rel="stylesheet"
+/>
+{% endblock %} {% block contents %}
 <div class="form-outline w-50">
     <textarea class="form-control" id="messages" rows="6" readonly></textarea>
 </div>
 <input type="text" id="message" placeholder="Message" />
 <button class="btn btn-primary" id="sendMsgButton">Send</button>
+
+<ul class="list-group" id="members"></ul>
 
 <script src="{{url_for('static',filename='js/chat.js')}}"></script>
 {% endblock %}
