Added working ready state

--- a/website/gamehub/templates/activities/base-activity.html
+++ b/website/gamehub/templates/activities/base-activity.html
@@ -6,5 +6,6 @@
         "localhost",
         "127.0.0.1",
     );
+    const socket = io(hostname);
 </script>
 {% endblock %} {% block contents %} {% endblock %}
