--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -9,6 +9,8 @@
 />
 {% endblock %} {% block contents %} {{ super() }}
 
+<button class="btn btn-secondary" id="readyButton">Ready</button>
+
 <black-card>Co jest kolejną modną dietą?</black-card>
 Available cards:
 <div class="card-container">
