--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -11,23 +11,10 @@
 
 <button class="btn btn-secondary" id="readyButton">Ready</button>
 
-<black-card>Co jest kolejną modną dietą?</black-card>
+<!--<black-card>Co jest kolejną modną dietą?</black-card>-->
 Available cards:
-<div class="card-container">
-    <white-card>Głód.</white-card>
-    <white-card
-        >Opowiadanie dowcipów o żydach w nieodpowiednim momencie.</white-card
-    >
-    <white-card
-        >To uczucie, gdy wydaje Ci się, że to tylko beknięcie, a okazuje się, że
-        to rzyg.</white-card
-    >
-    <white-card>Zamrażarka pełna organów.</white-card>
-    <white-card
-        >Zrzucane żyrandolu na przeciwników i wjeżdżanie do góry po
-        linie.</white-card
-    >
-</div>
+<div id="cards" class="card-container"></div>
+<button class="btn btn-primary" id="confirmButton">Confirm</button>
 
 <script src="{{url_for('static',filename='js/cah.js')}}"></script>
 {% endblock %}
