--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -12,8 +12,11 @@
 <button class="btn btn-secondary" id="readyButton">Ready</button>
 
 <!--<black-card>Co jest kolejną modną dietą?</black-card>-->
-Available cards:
-<div id="cards" class="card-container"></div>
+
+<fieldset>
+    <legend>Cards:</legend>
+    <div id="cards" class="card-container"></div>
+</fieldset>
 <button class="btn btn-primary" id="confirmButton">Confirm</button>
 
 <script src="{{url_for('static',filename='js/cah.js')}}"></script>
