--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -17,7 +17,7 @@
     <legend>Cards:</legend>
     <div id="cards" class="card-container"></div>
 </fieldset>
-<button class="btn btn-primary" id="confirmButton" hidden>Confirm</button>
+<button class="btn btn-primary" id="confirmButton">Confirm</button>
 
 <script src="{{url_for('static',filename='js/cah.js')}}"></script>
 {% endblock %}
