Added current username and auto login

--- a/website/gamehub/static/css/cah.css
+++ b/website/gamehub/static/css/cah.css
@@ -32,10 +32,15 @@ white-card {
     color: black;
 }
 
-input:checked + label > white-card {
+white-card.checked {
+    background-color: black;
+    color: red;
+}
+
+/*input:checked + label > white-card {
     color: red;
     outline: 0.4em solid darkseagreen;
-}
+}*/
 
 .visually-hidden {
     clip: rect(0 0 0 0);
