--- a/website/gamehub/templates/lobby/lobby.html
+++ b/website/gamehub/templates/lobby/lobby.html
@@ -20,6 +20,9 @@
     </ol>
 </div>
 
+<span class="d-inline-block text-truncate">
+    Current username: <b id="usernameCurrent"></b>
+</span>
 <div class="form-text mb-1">
     <label for="usernameInput"><b>Username</b></label>
     <input
