--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -13,10 +13,10 @@
 
 <div id="black-card" class="black-card-container"></div>
 
-<fieldset>
-    <legend>Cards:</legend>
-    <div id="cards" class="card-container"></div>
-</fieldset>
+<!--<fieldset>
+    <legend>Cards:</legend>-->
+<div id="cards" class="card-container"></div>
+<!--</fieldset>-->
 <button class="btn btn-primary" id="confirmButton">Confirm</button>
 
 <script src="{{url_for('static',filename='js/cah.js')}}"></script>
