--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -15,7 +15,7 @@
 
 <!--<fieldset>
     <legend>Cards:</legend>-->
-<div id="cards" class="card-container"></div>
+<card-container id="cards" class="card-container"></card-container>
 <!--</fieldset>-->
 <button class="btn btn-primary" id="confirmButton">Confirm</button>
 
