--- a/website/gamehub/static/css/cah.css
+++ b/website/gamehub/static/css/cah.css
@@ -32,16 +32,6 @@ white-card {
     color: black;
 }
 
-white-card.checked {
-    background-color: black;
-    color: red;
-}
-
-/*input:checked + label > white-card {
-    color: red;
-    outline: 0.4em solid darkseagreen;
-}*/
-
 .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
@@ -50,4 +40,53 @@ white-card.checked {
     position: absolute;
     white-space: nowrap;
     width: 1px;
+}
+
+/*label {
+    border: 1px solid #fff;
+    display: block;
+    position: relative;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}*/
+
+label:has(white-card)::before {
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: -25px;
+    left: -25px;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    line-height: 43px;
+    font-size: 35px;
+    transition-duration: 0.4s;
+    transform: scale(0);
+}
+
+label:has(white-card) {
+    /*border-color: 0px;*/
+    transition-duration: 0.2s;
+    transform-origin: 50% 50%;
+}
+
+label:has(white-card.checked) {
+    /*box-shadow: inset 0 0 0 1px palevioletred;*/
+
+    transform: scale(0.9);
+    box-shadow: inset 0 0 10px palevioletred;
+    /*z-index: -1;*/
+}
+
+label:has(white-card.checked)::before {
+    content: "✓";
+    background-color: palevioletred;
+    transform: scale(1);
 }
