--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -12,11 +12,9 @@
 <button class="btn btn-secondary" id="readyButton">Ready</button>
 
 <div id="black-card" class="black-card-container"></div>
+<card-carousel class="card-container"> </card-carousel>
 
-<!--<fieldset>
-    <legend>Cards:</legend>-->
 <card-container id="cards" class="card-container"></card-container>
-<!--</fieldset>-->
 <button class="btn btn-primary" id="confirmButton">Confirm</button>
 
 <script src="{{url_for('static',filename='js/cah.js')}}"></script>
