--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -11,8 +11,10 @@
 
 <button class="btn btn-secondary" id="readyButton">Ready</button>
 
-<div id="black-card" class="black-card-container"></div>
-<card-carousel class="card-container"> </card-carousel>
+<div class="upper-row">
+    <div id="black-card" class="black-card-container"></div>
+    <card-carousel class="card-container"> </card-carousel>
+</div>
 
 <card-container id="cards" class="card-container"></card-container>
 <button class="btn btn-primary" id="confirmButton">Confirm</button>
