--- a/website/gamehub/templates/activities/cah.html
+++ b/website/gamehub/templates/activities/cah.html
@@ -13,6 +13,7 @@
 
 <div class="upper-row">
     <div id="black-card" class="black-card-container"></div>
+    <button id="confirmWinner" class="btn btn-primary">Confirm</button>
     <card-carousel class="card-container"> </card-carousel>
 </div>
 
