--- a/website/gamehub/static/css/chat.css
+++ b/website/gamehub/static/css/chat.css
@@ -12,9 +12,8 @@
 
 .sidebar .nav-link {
     display: flex;
-    align-items: center;
-    justify-items: flex-start;
-    gap: 20px;
+    flex-direction: column;
+    align-items: stretch;
     padding: 10px 20px;
     color: black;
 }
@@ -23,6 +22,19 @@
     background-color: skyblue;
 }
 
-.nav-link .content {
-    justify-self: flex-end;
+a div:has(#message) {
+    display: flex;
+    align-items: center;
+}
+
+.form-outline:has(#messages) {
+    width: 100%;
+}
+
+.list-group {
+    width: 100%;
+}
+
+#message {
+    width: 280px;
 }
